--- a/index.html
+++ b/index.html
@@ -180,9 +180,9 @@
             { en: "musical", jp: "ミュージカル", startMode: "en" },
             { en: "performance", jp: "演技、演奏、公演", startMode: "jp" },
             { en: "theater", jp: "劇場、映画館", startMode: "en" },
-            { en: "thing(s)", jp: "もの、こと", startMode: "en" },
+            { en: "thing or things", jp: "もの、こと", startMode: "en" },
             { en: "came", jp: "come (来る) の過去形", startMode: "jp" },
-            { en: "count(ed)", jp: "(…を) 数える", startMode: "jp" },
+            { en: "count or counted", jp: "(…を) 数える", startMode: "jp" },
             { en: "each", jp: "それぞれの、各自の", startMode: "en" },
             { en: "feel", jp: "…と感じる、気持ちがする", startMode: "jp" },
             { en: "felt", jp: "feel (感じる) の過去形", startMode: "en" }
