--- a/index - コピー.html
+++ b/index - コピー.html
@@ -234,19 +234,19 @@
     <script>
         // ★★★ デフォルトデータ（ファイル読み込みがない場合に表示） ★★★
         const defaultData = [
-            { en: "midnight", jp: "夜の12時・真夜中", startMode: "jp" },
-            { en: "said", jp: "say（言う）の過去形", startMode: "en" },
-            { en: "spend", jp: "（時）を過ごす", startMode: "jp" },
-            { en: "spent", jp: "spend（過ごす）の過去形", startMode: "en" },
-            { en: "stood", jp: "stand（立つ）の過去形", startMode: "jp" },
-            { en: "took", jp: "take（持っていく）の過去形", startMode: "jp" },
-            { en: "anywhere", jp: "【否定文で】どこにも（…ない）", startMode: "en" },
-            { en: "brought", jp: "bring（持ってくる）の過去形", startMode: "en" },
-            { en: "did", jp: "do（する）の過去形", startMode: "en" },
-            { en: "early", jp: "早く", startMode: "jp" },
-            { en: "got", jp: "get（得る）の過去形", startMode: "jp" },
-            { en: "made", jp: "make（作る）の過去形", startMode: "en" },
-            { en: "nothing", jp: "何も…ない", startMode: "jp" }
+            { en: "actor", jp: "(女性を含む) 俳優", startMode: "jp" },
+            { en: "full", jp: "いっぱいの、満腹の", startMode: "jp" },
+            { en: "last", jp: "この前の、昨…、先…", startMode: "jp" },
+            { en: "leading", jp: "主要な", startMode: "en" },
+            { en: "musical", jp: "ミュージカル", startMode: "en" },
+            { en: "performance", jp: "演技、演奏、公演", startMode: "jp" },
+            { en: "theater", jp: "劇場、映画館", startMode: "en" },
+            { en: "thing or things", jp: "もの、こと", startMode: "en" },
+            { en: "came", jp: "come (来る) の過去形", startMode: "jp" },
+            { en: "count or counted", jp: "(…を) 数える", startMode: "jp" },
+            { en: "each", jp: "それぞれの、各自の", startMode: "en" },
+            { en: "feel", jp: "…と感じる、気持ちがする", startMode: "jp" },
+            { en: "felt", jp: "feel (感じる) の過去形", startMode: "en" }
         ];
 
         let currentList = [...defaultData];
