--- a/index.html
+++ b/index.html
@@ -234,19 +234,19 @@
     <script>
         // ★★★ デフォルトデータ（ファイル読み込みがない場合に表示） ★★★
         const defaultData = [
-            { en: "midnight", jp: "夜の12時・真夜中", startMode: "jp" },
-            { en: "said", jp: "say（言う）の過去形", startMode: "en" },
-            { en: "spend", jp: "（時）を過ごす", startMode: "jp" },
-            { en: "spent", jp: "spend（過ごす）の過去形", startMode: "en" },
-            { en: "stood", jp: "stand（立つ）の過去形", startMode: "jp" },
-            { en: "took", jp: "take（持っていく）の過去形", startMode: "jp" },
-            { en: "anywhere", jp: "【否定文で】どこにも（…ない）", startMode: "en" },
-            { en: "brought", jp: "bring（持ってくる）の過去形", startMode: "en" },
-            { en: "did", jp: "do（する）の過去形", startMode: "en" },
-            { en: "early", jp: "早く", startMode: "jp" },
-            { en: "got", jp: "get（得る）の過去形", startMode: "jp" },
-            { en: "made", jp: "make（作る）の過去形", startMode: "en" },
-            { en: "nothing", jp: "何も…ない", startMode: "jp" }
+            { en: "parent or parents", jp: "親、[sつきで]両親", startMode: "jp" },
+            { en: "relax or relaxed", jp: "くつろぐ", startMode: "en" },
+            { en: "special", jp: "特別の", startMode: "en" },
+            { en: "traditional", jp: "伝統的(でんとうてき)な", startMode: "jp" },
+            { en: "care", jp: "世話", startMode: "jp" },
+            { en: "fell", jp: "fall（転ぶ）の過去形(かこけい)", startMode: "en" },
+            { en: "grandma", jp: "おばあちゃん", startMode: "en" },
+            { en: "hotel", jp: "ホテル、旅館", startMode: "en" },
+            { en: "miss", jp: "…がないのをさびしく思う", startMode: "jp" },
+            { en: "outside", jp: "外で[に、へ]", startMode: "jp" },
+            { en: "show or showing", jp: "…を見せる、示す(しめす)", startMode: "en" },
+            { en: "against", jp: "…に対抗(たいこう)して、反対して", startMode: "jp" },
+            { en: "another", jp: "ほかの、別の、ちがった", startMode: "jp" }
         ];
 
         let currentList = [...defaultData];
