--- a/index.html
+++ b/index.html
@@ -234,19 +234,19 @@
     <script>
         // ★★★ デフォルトデータ（ファイル読み込みがない場合に表示） ★★★
         const defaultData = [
-            { en: "parent or parents", jp: "親、[sつきで]両親", startMode: "jp" },
-            { en: "relax or relaxed", jp: "くつろぐ", startMode: "en" },
-            { en: "special", jp: "特別の", startMode: "en" },
-            { en: "traditional", jp: "伝統的(でんとうてき)な", startMode: "jp" },
-            { en: "care", jp: "世話", startMode: "jp" },
-            { en: "fell", jp: "fall（転ぶ）の過去形(かこけい)", startMode: "en" },
-            { en: "grandma", jp: "おばあちゃん", startMode: "en" },
-            { en: "hotel", jp: "ホテル、旅館", startMode: "en" },
-            { en: "miss", jp: "…がないのをさびしく思う", startMode: "jp" },
-            { en: "outside", jp: "外で[に、へ]", startMode: "jp" },
-            { en: "show or showing", jp: "…を見せる、示す(しめす)", startMode: "en" },
-            { en: "against", jp: "…に対抗(たいこう)して、反対して", startMode: "jp" },
-            { en: "another", jp: "ほかの、別の、ちがった", startMode: "jp" }
+          { en: "parent or parents", jp: "親、[parentsで]両親", startMode: "en" },
+          { en: "relax or relaxed", jp: "くつろぐ", startMode: "jp" },
+          { en: "special", jp: "特別の", startMode: "jp" },
+          { en: "traditional", jp: "伝統的(でんとうてき)な", startMode: "en" },
+          { en: "care", jp: "世話", startMode: "jp" },
+          { en: "fell", jp: "fall（転ぶ）の過去形(かこけい)", startMode: "en" },
+          { en: "grandma", jp: "おばあちゃん", startMode: "en" },
+          { en: "hotel", jp: "ホテル、旅館", startMode: "en" },
+          { en: "miss", jp: "…がないのをさびしく思う", startMode: "jp" },
+          { en: "outside", jp: "外で[に、へ]", startMode: "jp" },
+          { en: "show or showing", jp: "…を見せる、示す(しめす)", startMode: "en" },
+          { en: "against", jp: "…に対抗(たいこう)して、反対して", startMode: "jp" },
+          { en: "another", jp: "ほかの、別の、ちがった", startMode: "jp" }
         ];
 
         let currentList = [...defaultData];
